skip optical flow entirely for CMP inside run_eval_real.py

--- a/stg-real-eval/configs/block_b_nuscenes.yaml
+++ b/stg-real-eval/configs/block_b_nuscenes.yaml
@@ -1,6 +1,6 @@
 dataset: nuscenes-mini
 paths:
-  root: "/PATH/TO/nuscenes-mini"   # change locally
+  root: "/content/nuscenes-mini"   # change locally
 eval:
   take_every: 5
   max_scenes: 1
